# zk-age-verifier

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  compose.test.yaml  compose.yaml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: api.md  index.md
examples/site-dc-mdoc/: .dockerignore  README.md
examples/site-dc-mdoc/anchors/: README.md  eu-av-test.pem
examples/site-dc-mdoc/tests/: test_app.py
examples/verifying-site/: Dockerfile  README.md  compose.yaml  pyproject.toml  verifier-config.toml
examples/verifying-site/tests/: conftest.py  test_app.py
examples/verifying-site/verifying_site/: __init__.py  __main__.py  app.py
examples/verifying-site/verifying_site/static/: dc.js  index.html
scripts/: dump_openapi.py  generate_credentials.py
src/zk_age_verifier/: __init__.py  __main__.py  app.py  config.py  log.py  problem.py
src/zk_age_verifier/core/: __init__.py  constants.py  encoding.py  trustlist.py
src/zk_age_verifier/core/engine/: __init__.py  circuits.py  mdoc_zk.py
src/zk_age_verifier/core/transport/: __init__.py  dc.py
src/zk_age_verifier/service/: __init__.py  routes.py  sessions.py  verify.py
tests/: conftest.py  test_app.py  test_config.py  test_log.py  test_main.py  test_problem.py
tests/core/: conftest.py  test_encoding.py  test_trustlist.py
tests/core/engine/: test_circuits.py  test_mdoc_zk.py
tests/core/transport/: test_dc.py
tests/data/: README.md
tests/integration/: conftest.py  presenter.py  test_black_box.py  test_e2e.py  test_upstream_response.py  test_vendored_transcript.py
tests/integration/credentials/: README.md  test-anchor.pem
tests/integration/credentials/eu-av/: credential.cbor  device-key.pem  leaf.pem  manifest.toml
tests/integration/credentials/eu-av-untrusted/: credential.cbor  device-key.pem  leaf.pem  manifest.toml
tests/integration/credentials/eu-av-vendored/: credential.cbor  leaf.pem  manifest.toml
tests/integration/credentials/mdl/: credential.cbor  device-key.pem  leaf.pem  manifest.toml
tests/service/: conftest.py  test_routes.py  test_sessions.py  test_verify.py
