[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "zk-age-verifier"
version = "0.0.1.dev0"
description = "Verifier service for EU age-verification proofs (Longfellow ZK over mdoc, W3C Digital Credentials API)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Nathan Schepers" }]
keywords = ["age-verification", "zero-knowledge", "mdoc", "eudi", "longfellow", "digital-credentials-api"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Framework :: FastAPI",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cbor2>=6.1.3",
    "cryptography>=46.0.7",
    "fastapi",
    "granian",
    "pydantic-settings",
    "pyhpke>=0.6.4",
    "pylongfellow>=0.2.2,<0.3",
    "structlog",
]

[project.urls]
Homepage = "https://github.com/pipe23-org/zk-age-verifier"
Documentation = "https://zk-age-verifier.readthedocs.io/"
Repository = "https://github.com/pipe23-org/zk-age-verifier"
Issues = "https://github.com/pipe23-org/zk-age-verifier/issues"

[project.scripts]
zk-age-verifier = "zk_age_verifier.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["src/zk_age_verifier"]



[dependency-groups]
test = ["pytest>=8", "pytest-cov", "httpx", "pytest-asyncio"]
docs = ["mkdocs-material", "mkdocstrings[python]", "interrogate", "mkdocs-swagger-ui-tag"]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["examples"]


[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Coverage is on by default so a bare `uv run pytest` enforces the fail_under gate
# in [tool.coverage.report]; without it the gate is a claim, not a check. The =form
# is deliberate: bare `--cov` takes an optional argument and would swallow a
# following positional path (e.g. `make test-live`'s tests/integration), collapsing the
# path restriction back to testpaths. The live-server targets run only the integration
# subset, which cannot reach fail_under, so `make test-live`/`test-container` pass --no-cov.
addopts = "--cov=zk_age_verifier"
markers = [
    "inprocess_only: white-box test that reaches into the process (monkeypatched clocks, store access) and cannot cross a socket; skipped under --transport=live",
]


[tool.interrogate]
fail-under = 100
ignore-init-module = false
exclude = ["tests", "examples"]

[tool.coverage.run]
branch = true
source = ["zk_age_verifier"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", 'if __name__ == "__main__":']
